--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -10,7 +10,7 @@
         </p>
         <p>
             <label>Введите описание</label><br>
-            <input type="text" class="form-control" name="description" />
+            <input type="text" class="form-control" name="content" />
         </p>
         <p>
             <label>Введите категорию</label><br>
