--- a/catalog/templates/catalog/blog_form.html
+++ b/catalog/templates/catalog/blog_form.html
@@ -1,7 +1,7 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <form method="POST" action="create/">
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Сохранить" >
