--- a/catalog/templates/catalog/includes/main_menu.html
+++ b/catalog/templates/catalog/includes/main_menu.html
@@ -2,7 +2,7 @@
     <h5 class="my-0 mr-md-auto font-weight-normal" >Skystore</h5>
     <img src="/media/99.jpg" width="10%" height="10%" />
     <nav class="ms-3">
-        <a class="p-2 btn btn-outline-primary" href='{% url "catalog:home" %}'>Блог</a>
+        <a class="p-2 btn btn-outline-primary" href='{% url "catalog:home" %}'>Продукты</a>
         <a class="p-2 btn btn-outline-primary" href='{% url "catalog:contacts" %}'>Контакты</a>
     </nav>
 </div>
