--- a/catalog/templates/catalog/includes/main_menu.html
+++ b/catalog/templates/catalog/includes/main_menu.html
@@ -5,4 +5,12 @@
         <a class="p-2 btn btn-outline-primary" href='{% url "catalog:home" %}'>Продукты</a>
         <a class="p-2 btn btn-outline-primary" href='{% url "catalog:contacts" %}'>Контакты</a>
     </nav>
+    <nav class="ms-3">
+        {% if user.is_authenticated %}
+        <a class="p-2 btn btn-outline-primary" href='{% url "users:profile" %}'>Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href='{% url "users:logout" %}'>Выход</a>
+        {% else %}
+        <a class="p-2 btn btn-outline-primary" href='{% url "users:login" %}'>Вход</a>
+        {% endif %}
+    </nav>
 </div>
