--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -4,8 +4,10 @@
     <h1>{{ object.name }}</h1>
     <h3>{{ object.description }}</h3>
     <h3>{{ object.price }}</h3>
+    {% if perms.catalog.update_product %}
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:update' object.pk %}">Редактировать</a>
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:delete' object.pk %}">Удалить</a>
+    {% endif %}
 </div>
 {% endblock %}
 
