--- a/catalog/templates/catalog/product_with_version.html
+++ b/catalog/templates/catalog/product_with_version.html
@@ -6,29 +6,29 @@
         {{ form.as_p }}
         <input type="submit" value="Сохранить" >
     </form>
-    <form method="post">
-        <div class="formset">
-            {{ formset.management_form }}
-            {% for form in formset.forms %}
-                <div class="formset_row">
-                    {% for field in form.visible_fields %}
-                        <div class="formset_col">
-                            {% if forloop.first %}
-                                {% for hidden in form.hidden_fields %}
-                                    {{ hidden }}
-                                {% endfor %}
-                            {% endif %}
-                            {{ field.errors.as_ul }}
-                            {% if not forloop.last %}
-                                {{ field.label }}
-                            {% endif %}
-                            {{ field }}
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </div>
-    </form>
+<!--    <form method="post">-->
+<!--        <div class="formset">-->
+<!--            {{ formset.management_form }}-->
+<!--            {% for form in formset.forms %}-->
+<!--                <div class="formset_row">-->
+<!--                    {% for field in form.visible_fields %}-->
+<!--                        <div class="formset_col">-->
+<!--                            {% if forloop.first %}-->
+<!--                                {% for hidden in form.hidden_fields %}-->
+<!--                                    {{ hidden }}-->
+<!--                                {% endfor %}-->
+<!--                            {% endif %}-->
+<!--                            {{ field.errors.as_ul }}-->
+<!--                            {% if not forloop.last %}-->
+<!--                                {{ field.label }}-->
+<!--                            {% endif %}-->
+<!--                            {{ field }}-->
+<!--                        </div>-->
+<!--                    {% endfor %}-->
+<!--                </div>-->
+<!--            {% endfor %}-->
+<!--        </div>-->
+<!--    </form>-->
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script src="https: //cdnjs.cloudflare.com/ajax/Libs/jquery.formset/1.2.2/jquery.formset.min.js"
         integrity="sha512-LtwjKsDTo3hll/wV66ZaEkf2WOAFxmg7rWM76I8kOCYKLSKy44U/BY0/BFaNNH3NGDS8BSz3meB9wtSnm41oL +pA=="
