--- a/catalog/templates/catalog/includes/main_menu.html
+++ b/catalog/templates/catalog/includes/main_menu.html
@@ -3,6 +3,7 @@
     <img src="/media/99.jpg" width="10%" height="10%" />
     <nav class="ms-3">
         <a class="p-2 btn btn-outline-primary" href='{% url "catalog:home" %}'>Продукты</a>
+        <a class="p-2 btn btn-outline-primary" href='{% url "catalog:category" %}'>Категории</a>
         <a class="p-2 btn btn-outline-primary" href='{% url "catalog:contacts" %}'>Контакты</a>
     </nav>
     <nav class="ms-3">
